# webtransport-lag-investigation

./: Cargo.toml  README.md  build-client.sh  host-web.sh  open-chrome.sh
client/: Cargo.toml  common.js  package-lock.json  webpack.config.js
client/src/: lib.rs
client/static/: index.html
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
web/: common.js
web/basic/: index.js
web/issue-example/: index.html  webtransport.js
web/sending-only-worker/: index.js  worker.js
web/transferred-from-worker/: index.js  worker.js
web/wasm/: worker.js
web/webrtc/: index.js
web/webrtc-in-worker-transferred-channel/: index.html  index.js  worker.js
web/webtransport-in-worker/: index.js  worker.js
web/webtransport-in-worker-transferred-stream/: index.html  index.js  worker.js
webrtcserver/: Cargo.toml
webrtcserver/src/: main.rs
